# msu-calculus-methods

./: .gitignore  README.md  pyproject.toml
3/: relaxation.jl  sip.jl
4/: graph.py  main.ipynb  main.jl
